# industrial-twin-pipeline

./: .gitignore  Makefile  README.md  ingest.py  pyproject.toml
dbt/: dbt_project.yml
dbt/macros/: generate_schema_name.sql
dbt/models/: schema.yml
dbt/models/marts/: mart_failure_analysis.sql  mart_machine_health.sql  mart_production_performance.sql
dbt/models/staging/: sources.yml  stg_demand.sql  stg_failures.sql  stg_maintenance.sql  stg_orders.sql  stg_telemetry.sql
kestra/: 00_setup_kv.yaml  01_industrial_twin_pipeline.yaml  docker-compose.yml
spark/: transform.py
terraform/: main.tf  outputs.tf  variables.tf
