[project]
name = "industrial-twin-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt>=1.0.0.40.15",
    "dbt-bigquery>=1.11.1",
    "dbt-core>=1.11.7",
    "google-cloud-bigquery>=3.40.1",
    "google-cloud-dataproc>=5.25.0",
    "google-cloud-storage>=3.1.1",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pyspark>=4.1.1",
    "streamlit>=1.45.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
